--- a/java-online-schema-change/pom.xml
+++ b/java-online-schema-change/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>simulate-pt-tools</artifactId>
         <groupId>com.cracker</groupId>
         <version>0.0.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>online-schema-change</artifactId>
+    <artifactId>java-online-schema-change</artifactId>
+    <name>java-online-schema-change</name>
+    <description>java-online-schema-change</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
