--- a/java-online-schema-change/pom.xml
+++ b/java-online-schema-change/pom.xml
@@ -20,6 +20,11 @@
             <version>0.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.17</version>
+        </dependency>
     </dependencies>
 
     <properties>
